--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Lista Equipamentos"
-        android:id="@+id/textView"
+        android:id="@+id/textViewTitle"
         android:gravity="center_vertical"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:text="Novo"
         android:id="@+id/novoID"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/textViewTitle"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp" />
 
